--- a/global_components/Graph/Graph.module.scss
+++ b/global_components/Graph/Graph.module.scss
@@ -4,7 +4,7 @@
   width: 100%;
   height: 100%;
 
-  @media screen and (min-width: $tablet) {
+  @media screen and (min-width: $phone) {
     background-color: $white;
     border: 1px solid $grey-light;
     padding: $spacing8;
@@ -17,7 +17,7 @@
     .line {
       display: none;
 
-      @media screen and (min-width: $tablet) {
+      @media screen and (min-width: $phone) {
         display: block;
         background-color: $grey-light;
         height: 1px;
@@ -33,7 +33,7 @@
       gap: $spacing2;
       overflow: auto;
 
-      @media screen and (min-width: $tablet) {
+      @media screen and (min-width: $phone) {
         gap: $spacing5;
       }
     }
