--- a/components/overview/DesktopOverview/TopNav/Items/Items.module.scss
+++ b/components/overview/DesktopOverview/TopNav/Items/Items.module.scss
@@ -25,4 +25,14 @@
       text-align: initial;
     }
   }
+
+  .scroll-wrapper {
+    overflow: auto;
+    height: 218px;
+
+    .reward-wrapper {
+      display: grid;
+      gap: $spacing4;
+    }
+  }
 }
