--- a/styles/DayPicker.scss
+++ b/styles/DayPicker.scss
@@ -43,6 +43,10 @@
     color: $red;
   }
 
+  .rdp-tracked_day {
+    color: $green-dark;
+  }
+
   .rdp-day_today {
     color: $green;
   }
@@ -66,6 +70,7 @@
     font-weight: $weight-bold;
     font-size: $font-small;
     border-radius: $border-radius;
+    transition: 0.2s;
   }
 
   .rdp-cell {
