--- a/components/overview/DesktopOverview/Weeks/Week/Week.module.scss
+++ b/components/overview/DesktopOverview/Weeks/Week/Week.module.scss
@@ -2,4 +2,11 @@
 
 .wrapper {
   display: grid;
+  gap: $spacing9;
+
+  .top {
+    display: grid;
+    gap: $spacing11;
+    grid-template-columns: 325px minmax(0, 1fr);
+  }
 }
