--- a/components/overview/DesktopOverview/Weeks/Weeks.module.scss
+++ b/components/overview/DesktopOverview/Weeks/Weeks.module.scss
@@ -4,6 +4,11 @@
   display: grid;
   gap: $spacing4;
 
+  .weeks {
+    display: grid;
+    gap: $spacing6;
+  }
+
   h3 {
     width: max-content;
     @include underline;
