--- a/components/activities/EditView/IconSelector/IconSelector.module.scss
+++ b/components/activities/EditView/IconSelector/IconSelector.module.scss
@@ -39,8 +39,6 @@
     top: $spacing10;
 
     .inside {
-      width: 190px;
-      height: 120px;
       background-color: $white;
       border: $border;
 
@@ -51,25 +49,28 @@
         border-bottom: $border;
       }
 
-      .content {
-        padding: $spacing4;
-        display: grid;
-        grid-template-columns: repeat(5, 1fr);
-        justify-items: center;
-        font-size: $font-paragraph;
-        gap: $spacing4;
+      .scroll-container {
         overflow: auto;
-        height: 103px;
+        padding: $spacing4;
+        height: 110px;
 
-        .active {
-          color: $green;
-        }
+        .content {
+          display: grid;
+          grid-template-columns: repeat(5, 1fr);
+          justify-items: center;
+          font-size: $font-paragraph;
+          gap: $spacing4;
 
-        svg {
-          cursor: pointer;
-          transition: 0.2s;
-          &:hover {
+          .active {
             color: $green;
+          }
+
+          svg {
+            cursor: pointer;
+            transition: 0.2s;
+            &:hover {
+              color: $green;
+            }
           }
         }
       }
