--- a/global_components/RewardCard/RewardCard.module.scss
+++ b/global_components/RewardCard/RewardCard.module.scss
@@ -8,7 +8,7 @@
   .image {
     position: relative;
     width: 100%;
-    height: 80px;
+    height: 100px;
     background-color: $black;
     z-index: 1;
 
@@ -21,7 +21,7 @@
     display: grid;
     position: relative;
     gap: $spacing2;
-    padding: $spacing4;
+    padding: $spacing3 $spacing4;
 
     .top {
       display: grid;
