Allow user to delete account

--- a/components/settings/Content/Account/Account.module.scss
+++ b/components/settings/Content/Account/Account.module.scss
@@ -4,6 +4,10 @@
   display: grid;
   gap: $spacing4;
 
+  .description {
+    margin-bottom: $spacing3;
+  }
+
   strong,
   p {
     font-size: $font-small;
