Select all days in week in desktop overview

--- a/styles/DayPicker.scss
+++ b/styles/DayPicker.scss
@@ -85,6 +85,7 @@
     transition: 0.2s;
     color: $white;
     box-shadow: -3px 3px 0px $black;
+    background-color: $green;
   }
 
   .rdp-second_chance {
