Inspect and correct text in site where necessary

--- a/components/activities/EditView/EditView.module.scss
+++ b/components/activities/EditView/EditView.module.scss
@@ -35,8 +35,12 @@
     margin-bottom: $spacing2;
   }
 
-  .description {
+  .activity-type {
     margin-bottom: $spacing1;
+  }
+
+  .description {
+    margin-bottom: $spacing3;
   }
 
   .inactive {
