Add pwa install button

--- a/global_components/Layout/DesktopNav/DesktopNav.module.scss
+++ b/global_components/Layout/DesktopNav/DesktopNav.module.scss
@@ -2,10 +2,15 @@
 
 .wrapper {
   display: grid;
+  align-content: space-between;
   width: 91px;
   background-color: $white;
   border-right: 1px solid $grey-light;
-  align-content: start;
+
+  .items {
+    display: grid;
+    align-content: start;
+  }
 
   .item {
     cursor: pointer;
