--- a/global_components/GeneralTopNav/GeneralTopNav.module.scss
+++ b/global_components/GeneralTopNav/GeneralTopNav.module.scss
@@ -26,32 +26,38 @@
     }
   }
 
-  .reward {
-    position: relative;
-    font-size: $font-h3;
-    cursor: pointer;
+  .icon-wrapper {
+    display: grid;
+    grid-auto-flow: column;
+    gap: $spacing6;
 
-    .counter {
-      height: 18px;
-      min-width: 18px;
-      padding: 0 0.35rem;
-      background-color: $red;
-      border-radius: 50px;
-      display: grid;
-      justify-content: center;
-      align-items: center;
-      position: absolute;
-      top: -3px;
-      left: 9px;
+    .reward {
+      position: relative;
+      font-size: $font-h3;
+      cursor: pointer;
 
-      &.completed {
-        background-color: $green;
-      }
+      .counter {
+        height: 18px;
+        min-width: 18px;
+        padding: 0 0.35rem;
+        background-color: $red;
+        border-radius: 50px;
+        display: grid;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        top: -3px;
+        left: 9px;
 
-      p {
-        color: $white;
-        font-size: $font-tiny;
-        font-weight: $weight-semi-bold;
+        &.completed {
+          background-color: $green;
+        }
+
+        p {
+          color: $white;
+          font-size: $font-tiny;
+          font-weight: $weight-semi-bold;
+        }
       }
     }
   }
