add topnav to mobile activities page & text correction

--- a/components/activities/TopBar/TopBar.module.scss
+++ b/components/activities/TopBar/TopBar.module.scss
@@ -1,5 +1,15 @@
 @import 'styles/Variables';
 
+.mobile-wrapper {
+  display: grid;
+  align-items: center;
+  padding: 0 $spacing5;
+
+  p {
+    font-weight: $weight-bold;
+  }
+}
+
 .wrapper {
   display: grid;
   height: 181px;
