Add enforce balance mode rule

--- a/global_components/ProgressCircle/Circles/Circles.module.scss
+++ b/global_components/ProgressCircle/Circles/Circles.module.scss
@@ -41,6 +41,10 @@
     transform: rotate(-90deg);
     stroke: $green;
 
+    &.phantom {
+      stroke: $green-light;
+    }
+
     &.bonus {
       stroke: $green-dark;
     }
