--- a/global_components/Layout/MobileNav/MobileNav.module.scss
+++ b/global_components/Layout/MobileNav/MobileNav.module.scss
@@ -6,6 +6,7 @@
   height: 65px;
   background-color: $white;
   border-top: 1px solid $grey-light;
+  align-content: center;
 
   .item {
     display: grid;
