--- a/components/reward/Reward.module.scss
+++ b/components/reward/Reward.module.scss
@@ -6,6 +6,6 @@
   .content {
     padding: $spacing7 $spacing5 $spacing5;
     overflow: auto;
-    height: calc($app-height - 50px - 65px);
+    height: calc($app-height - 50px - $mobile-nav-height);
   }
 }
