chore: enable multiple rewards on dashboard view

--- a/components/dashboard/SideBar/SideBar.module.scss
+++ b/components/dashboard/SideBar/SideBar.module.scss
@@ -16,11 +16,17 @@
       padding: 0 1.4rem;
     }
 
-    .reward {
+    .rewards-section {
       padding: 0 $spacing8;
 
       .title {
         margin-bottom: $spacing4;
+      }
+
+      .rewards {
+        display: grid;
+        gap: $spacing4;
+        justify-items: center;
       }
     }
   }
