--- a/global_components/SmallProgressCircle/SmallProgressCircle.module.scss
+++ b/global_components/SmallProgressCircle/SmallProgressCircle.module.scss
@@ -33,6 +33,16 @@
     }
   }
 
+  &.dark-green {
+    .background {
+      stroke: $green-light;
+    }
+
+    .stroke {
+      stroke: $green-dark;
+    }
+  }
+
   &.red {
     .background {
       stroke: $red-light;
