--- a/global_components/Slider/Slider.module.scss
+++ b/global_components/Slider/Slider.module.scss
@@ -11,6 +11,10 @@
     font-size: $font-small;
   }
 
+  &.hide-value {
+    padding-bottom: 0;
+  }
+
   &.penalty {
     .slider {
       background-color: $red-light;
