--- a/components/dashboard/SideBar/SideBar.module.scss
+++ b/components/dashboard/SideBar/SideBar.module.scss
@@ -7,6 +7,7 @@
   border-left: 1px solid $grey-light;
   padding: 90px 0 $spacing8;
   overflow: auto;
+  position: relative;
 
   .content {
     display: grid;
@@ -26,7 +27,22 @@
       .rewards {
         display: grid;
         gap: $spacing4;
-        justify-items: center;
+        max-height: 362px;
+        overflow: auto;
+      }
+
+      .bar {
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        background-color: $grey-light;
+      }
+
+      .reward-button {
+        display: grid;
+        justify-content: center;
+        margin-top: $spacing4;
       }
     }
   }
