--- a/global_components/RewardCard/RewardCard.module.scss
+++ b/global_components/RewardCard/RewardCard.module.scss
@@ -8,6 +8,7 @@
   border-radius: $border-radius;
   position: relative;
   overflow: hidden;
+  width: 296px;
 
   .relative-wrapper {
     position: relative;
