--- a/global_components/Checkbox/Checkbox.module.scss
+++ b/global_components/Checkbox/Checkbox.module.scss
@@ -18,6 +18,12 @@
     }
   }
 
+  &.disabled {
+    cursor: not-allowed;
+    pointer-events: none;
+    opacity: 0.5;
+  }
+
   .checkbox {
     display: grid;
     justify-content: center;
