chore: Add line-clamp to limit number of lines in RewardCard title

--- a/global_components/RewardCard/RewardCard.module.scss
+++ b/global_components/RewardCard/RewardCard.module.scss
@@ -47,6 +47,11 @@
           font-size: $font-large;
           color: $white;
           margin-bottom: $spacing1;
+          // limit the number of lines to 2
+          display: -webkit-box;
+          -webkit-line-clamp: 2;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
         }
 
         .mode {
