--- a/global_components/Stats/Stats.module.scss
+++ b/global_components/Stats/Stats.module.scss
@@ -45,7 +45,10 @@
       }
 
       .data {
-        font-size: $font-large;
+        @media screen and (min-width: $tablet) {
+          font-size: $font-large;
+        }
+
         font-weight: $weight-bold;
       }
     }
