--- a/global_components/Modal/Modal.module.scss
+++ b/global_components/Modal/Modal.module.scss
@@ -16,6 +16,14 @@
     transform: translate(-50%, -50%);
     width: 725px;
     max-width: 80%;
+
+    &.size-sensitive-content {
+      max-width: 95%;
+    }
+
+    &.wrap {
+      width: max-content;
+    }
   }
 
   .shader {
