chore: add no rewards condition

--- a/components/progress/SideBar/SideBar.module.scss
+++ b/components/progress/SideBar/SideBar.module.scss
@@ -47,6 +47,10 @@
         max-height: 362px;
         overflow: auto;
       }
+
+      .no-rewards {
+        font-size: $font-small;
+      }
     }
   }
 }
