--- a/components/progress/ActivityLineGraph/ActivityCircles/ActivityCircles.module.scss
+++ b/components/progress/ActivityLineGraph/ActivityCircles/ActivityCircles.module.scss
@@ -3,11 +3,37 @@
 .wrapper {
   display: grid;
   width: 100%;
-  height: 50px;
-  background-color: $green-light;
+  column-gap: $spacing2;
+  row-gap: $spacing3;
+  grid-auto-flow: column;
+  align-content: start;
+  justify-content: start;
+  overflow: auto;
 
   @media screen and (min-width: $desktop-large) {
+    grid-auto-flow: row;
+    grid-template-columns: auto auto;
     height: 100%;
-    width: 70px;
+  }
+
+  .activity {
+    display: grid;
+    justify-items: center;
+    text-align: center;
+    align-content: start;
+    gap: $spacing1;
+    cursor: pointer;
+
+    .name {
+      font-size: $font-extra-small;
+      width: 58px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+
+      @media screen and (min-width: $desktop-large) {
+        width: 65px;
+      }
+    }
   }
 }
