--- a/components/progress/ActivityLineGraph/LineGraph/LineGraph.module.scss
+++ b/components/progress/ActivityLineGraph/LineGraph/LineGraph.module.scss
@@ -7,7 +7,8 @@
   border: $border-light;
 
   @media screen and (min-width: $desktop-large) {
-    height: 400px;
+    min-height: 304px;
+    height: 100%;
     width: 100%;
   }
 }
