chore: refactor ActivityCircles component and add ActivityLineGraphContext

--- a/components/progress/ActivityLineGraph/ActivityCircles/ActivityCircles.module.scss
+++ b/components/progress/ActivityLineGraph/ActivityCircles/ActivityCircles.module.scss
@@ -23,6 +23,11 @@
     align-content: start;
     gap: $spacing1;
     cursor: pointer;
+    transition: 0.2s;
+
+    &.inactive {
+      opacity: 0.25;
+    }
 
     .name {
       font-size: $font-extra-small;
