chore: add cursor to line graph

--- a/styles/DayPicker.scss
+++ b/styles/DayPicker.scss
@@ -100,4 +100,8 @@
   .rdp-range_no_streak_day {
     color: $red-dark;
   }
+
+  .rdp-range_highlighted_day {
+    background-color: $green;
+  }
 }
