--- a/components/progress/QuickDateSelect/QuickDateSelect.module.scss
+++ b/components/progress/QuickDateSelect/QuickDateSelect.module.scss
@@ -12,6 +12,7 @@
     padding: $spacing2 0;
     transition: 0.2s;
     cursor: pointer;
+    background-color: $white;
 
     &:not(:last-child) {
       border-right: $border-light;
