fix: minor styling issues

--- a/components/progress/ActivityLineGraph/ActivityCircles/ActivityCircles.module.scss
+++ b/components/progress/ActivityLineGraph/ActivityCircles/ActivityCircles.module.scss
@@ -13,8 +13,7 @@
   @media screen and (min-width: $desktop-large) {
     grid-auto-flow: row;
     grid-template-columns: auto auto;
-    height: 100%;
-    overflow: initial;
+    height: 304px;
   }
 
   .activity {
