--- a/components/progress/ActivityLineGraph/LineGraph/LineGraph.module.scss
+++ b/components/progress/ActivityLineGraph/LineGraph/LineGraph.module.scss
@@ -8,7 +8,7 @@
   position: relative;
 
   @media screen and (min-width: $desktop-large) {
-    height: 304px;
+    height: 100%;
     width: 100%;
   }
 
