--- a/components/progress/StreakOverview/StreakOverview.module.scss
+++ b/components/progress/StreakOverview/StreakOverview.module.scss
@@ -50,7 +50,12 @@
 
   .streaks {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(215px, 1fr));
+
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+
+    @media screen and (min-width: $desktop) {
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    }
     gap: $spacing4;
   }
 
