chore: display bonus time in LineGraph

--- a/components/progress/ActivityLineGraph/ActivityCircles/ActivityCircle/ActivityCircle.module.scss
+++ b/components/progress/ActivityLineGraph/ActivityCircles/ActivityCircle/ActivityCircle.module.scss
@@ -43,6 +43,20 @@
     }
   }
 
+  &.bonus-time {
+    .background {
+      stroke: $green-light;
+
+      circle {
+        fill: $green-dark;
+      }
+    }
+
+    .stroke {
+      stroke: $green-dark;
+    }
+  }
+
   .content {
     position: absolute;
     top: 55%;
