fix: add reward padding bottom in scroll container on dashboard page

--- a/components/dashboard/SideBar/SideBar.module.scss
+++ b/components/dashboard/SideBar/SideBar.module.scss
@@ -29,6 +29,10 @@
         gap: $spacing4;
         max-height: 362px;
         overflow: auto;
+
+        &.has-scroll {
+          padding-bottom: $spacing4;
+        }
       }
 
       .bar {
