chore: disable displayMode toggle when no missing days are in total sum

--- a/components/progress/ActivityLineGraph/ActivityLineGraph.module.scss
+++ b/components/progress/ActivityLineGraph/ActivityLineGraph.module.scss
@@ -33,10 +33,16 @@
       justify-self: end;
       font-size: $font-small;
       cursor: pointer;
+      transition: 0.2s;
 
       svg {
         font-size: $font-extra-small;
         transform: translateY(-0.5px);
+      }
+
+      &.disabled {
+        color: $grey;
+        pointer-events: none;
       }
     }
   }
