refactor: update RewardCard styles for different reward statuses

--- a/global_components/RewardCard/RewardCard.module.scss
+++ b/global_components/RewardCard/RewardCard.module.scss
@@ -71,6 +71,10 @@
           padding: 0.15rem $spacing2;
           border-radius: $border-radius;
 
+          &.started {
+            background-color: $green-light;
+          }
+
           &.active,
           &.completed {
             background-color: $green-dark;
